# suggestguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: case-study-tr.md
suggestguard/: __init__.py  config.py  database.py  scanner.py
suggestguard/analyzers/: __init__.py  diff.py  sentiment.py  turkish.py
suggestguard/collectors/: __init__.py  autocomplete.py  base.py
suggestguard/notifiers/: __init__.py  slack.py  telegram.py  webhook.py
suggestguard/ui/: __init__.py  app.py  demo_data.py
suggestguard/ui/components/: __init__.py  cards.py  charts.py  filters.py  tables.py
suggestguard/ui/pages/: 1_📊_Dashboard.py  2_🔍_Tarama.py  3_📈_Raporlar.py  4_🏷️_Markalar.py  5_📢_Kampanyalar.py  6_⚙️_Ayarlar.py
tests/: conftest.py  test_charts.py  test_collector.py  test_config.py  test_database.py  test_diff.py  test_integration.py  test_notifiers.py  test_scanner.py  test_sentiment.py  test_turkish.py  test_ui_components.py
