[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suggestguard"
version = "0.1.0"
description = "Monitor Google autocomplete suggestions for brand reputation management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Derman Karateke" },
]
keywords = [
    "seo",
    "reputation",
    "brand-monitoring",
    "google-autocomplete",
    "sentiment-analysis",
    "streamlit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
]
dependencies = [
    "streamlit>=1.28",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "plotly>=5.15",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/dermnx/suggestguard"
Repository = "https://github.com/dermnx/suggestguard"
Issues = "https://github.com/dermnx/suggestguard/issues"
Changelog = "https://github.com/dermnx/suggestguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
suggestguard-scan = "suggestguard.scanner:main"
